[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tlsrpt"
version = "0.5.0rc1"
authors = [
  { name="sys4 AG", email="info@sys4.de" },
  { name="Boris Lohner", email="bl@sys4.de"},
]
description = "Collectd, fetcher and reportd software for SMTP TLS reporting (TLSRPT)"
readme = "README.md"
requires-python = ">=3.7"
license = "GPL-3.0-or-later"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]
dependencies = [
]

[project.optional-dependencies]
test = [
  "tox",
]
dev = [
  "build==1.2.2",
  "twine==5.1.1",
]

[project.urls]
"Homepage" = "https://github.com/sys4/tlsrpt"
"Bug Tracker" = "https://github.com/sys4/tlsrpt/issues"

[project.scripts]
tlsrpt-fetcher = "tlsrpt.tlsrpt:tlsrpt_fetcher_main"
tlsrpt-collectd = "tlsrpt.tlsrpt:tlsrpt_collectd_main"
tlsrpt-reportd = "tlsrpt.tlsrpt:tlsrpt_reportd_main"

[project.entry-points."tlsrpt.collectd"]
sqlite = "tlsrpt.tlsrpt:TLSRPTCollectdSQLite"
dummy = "tlsrpt.tlsrpt:DummyCollectd"

[project.entry-points."tlsrpt.fetcher"]
sqlite = "tlsrpt.tlsrpt:TLSRPTFetcherSQLite"

[tool.hatch.build]
only-packages = false

[tool.hatch.build.targets.wheel]
packages = ["tlsrpt"]
